--- a/pages/index.html
+++ b/pages/index.html
@@ -25,11 +25,11 @@
 
 	<main>
 		<section class="hero">
-			<div class="hero__content">
+			<!-- <div class="hero__content">
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
-			</div>
+			</div> -->
 			<video autoplay muted loop>
 				<source src="/assets/video/danila_video.mp4" type="video/mp4">
 			</video>
