--- a/pages/index.html
+++ b/pages/index.html
@@ -29,6 +29,7 @@
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
+				<img src="/assets/icons/arrow-down.svg" alt="">
 			</div>
 			<video autoplay muted loop>
 				<source src="/assets/video/danila_video.mp4" type="video/mp4">
