--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="header__container">
 			<a href="/" class="logo"><img src="/assets/icons/logo.svg" alt=""></a>
 			<nav>
-				<a href="#" class="navlink">Достижения</a>
+				<a href="#progress" class="navlink">Достижения</a>
 				<a href="#" class="navlink">Обо мне</a>
 				<a href="#" class="navlink">Трансформации</a>
 				<a href="#" class="navlink">Стоимость</a>
@@ -29,11 +29,42 @@
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
-				<img src="/assets/icons/arrow-down.svg" alt="">
+				<a href="#progress"><img src="/assets/icons/arrow-down.svg" alt=""></a>
 			</div>
 			<video autoplay muted loop>
 				<source src="/assets/video/danila_video.mp4" type="video/mp4">
 			</video>
+		</section>
+		<section class="progress" id="progress">
+			<div class="container">
+				<h2>Достижения</h2>
+				<div class="progress__grid">
+					<div>
+						<span class="year">2012</span>
+						<p class="desc">Чемпион России по Кроссфиту</p>
+						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
+						<div class="progress__images">
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div>
+						<img src="/assets/icons/cubok.svg" alt="">
+						<div class="timeline"></div>
+					</div>
+					<div>
+						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+					</div>
+					
+				</div>
+			</div>
 		</section>
 	</main>
 
