Add Progress Section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			<div class="container">
 				<h2>Достижения</h2>
 				<div class="progress__grid">
-					<div>
+					<div class="progress__col progress__col--first">
 						<span class="year">2012</span>
 						<p class="desc">Чемпион России по Кроссфиту</p>
 						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
@@ -55,9 +55,54 @@
 							</div>
 						</div>
 					</div>
-					<div>
+					<div class="timeline__wrap">
 						<img src="/assets/icons/cubok.svg" alt="">
 						<div class="timeline"></div>
+					</div>
+					<div>
+						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+					</div>
+
+					<div>
+						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+					</div>
+					<div class="timeline__wrap">
+						<img src="/assets/icons/cubok.svg" alt="">
+					</div>
+					<div class="progress__col progress__col--second">
+						<span class="year">2014</span>
+						<p class="desc">Серебряный призёр Чемпионата России по Кроссфиту</p>
+						<p class="desc">Серебряный призёр Siberian Showdown</p>
+						<div class="progress__images">
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="progress__col progress__col--first">
+						<span class="year">2015</span>
+						<p class="desc">Победитель кубка вызова “Ратиборец”</p>
+						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
+						<div class="progress__images">
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+							<div class="progress__images__inner">
+								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="timeline__wrap">
+						<img src="/assets/icons/cubok.svg" alt="">
 					</div>
 					<div>
 						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
