--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
-				<a href="#progress"><img src="/assets/icons/arrow-down.svg" alt=""></a>
+				<a class="arrow-down" href="#progress"><img src="/assets/icons/arrow-down.svg" alt=""></a>
 			</div>
 			<video autoplay muted loop>
 				<source src="/assets/video/danila_video.mp4" type="video/mp4">
@@ -107,7 +107,20 @@
 					<div>
 						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
-					
+				</div>
+				<div class="progress__bottom">
+					<div class="progress__bottom__item">
+						<img src="/assets/icons/aerobika.svg" alt="">
+						<p>Мастер спорта международного класса <br> по аэробной гимнастике</p>
+					</div>
+					<div class="progress__bottom__item">
+						<img src="/assets/icons/stanovaya.svg" alt="">
+						<p>Мастер спорта по становой тяге</p>
+					</div>
+					<div class="progress__bottom__item">
+						<img src="/assets/icons/regbi.svg" alt="">
+						<p>Кандидат мастера спорта <br> и чемпион Москвы по регби</p>
+					</div>
 				</div>
 			</div>
 		</section>
