--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="/" class="logo"><img src="/assets/icons/logo.svg" alt=""></a>
 			<nav>
 				<a href="#progress" class="navlink">Достижения</a>
-				<a href="#" class="navlink">Обо мне</a>
+				<a href="#about" class="navlink">Обо мне</a>
 				<a href="#" class="navlink">Трансформации</a>
 				<a href="#" class="navlink">Стоимость</a>
 				<a href="#" class="navlink">Контакты</a>
@@ -120,6 +120,35 @@
 					<div class="progress__bottom__item">
 						<img src="/assets/icons/regbi.svg" alt="">
 						<p>Кандидат мастера спорта <br> и чемпион Москвы по регби</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="about" id="about">
+			<div class="container">
+				<h2>Обо мне</h2>
+				<div class="about__grid">
+					<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+					<div class="about__text__wrap">
+						<div class="about__text__item">
+							<b>Образование:</b>
+							<p>Российский Государственный Университет Культуры Спорта и Туризма Факультет – сложно-координационных видов спорта</p>
+						</div>
+						<div class="about__text__item">
+							<b>Дополнительное образование:</b>
+							<p>Сертифицированные курсы – Crossfit Trainer <br> Курсы тренеров по физподготовке игроков в регби – Румыния 2014г, Бухарест</p>
+						</div>
+						<div class="about__text__item">
+							<b>Работа:</b>
+							<p>Персональная работа с Подопечными 2004 года «Планета Фитнес»</p>
+							<p>Сооснователь кроссфит залов Crossfit Flash (c 2013), главный тренер и спортивный директор</p>
+							<p>Основатель проекта Vitruvians Training (c 2020) - Онлайн Тренировки для дома без оборудования со своим весом</p>
+							<p>Главный тренер проекта по физической подготовке и выживанию в бою RmFight</p>
+							<p>Персональная работа в качестве тренера по физподготовке с сотрудниками Вымпел, Альфа, СО, СОБР, Рысь</p>
+							<p>Персональная работа с игроками профессиональных клубов и игроками Сборной России по регби</p>
+							<p>Персональная работа с фигуристами Сборной России</p>
+							<p>Раскрыл потенциал тела и духа +2000 подопечных</p>
+						</div>
 					</div>
 				</div>
 			</div>
