Add Mission Section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,18 @@
 				</div>
 			</div>
 		</section>
+		
+		<section class="mission">
+			<div class="container">
+				<h2>Миссия</h2>
+				<b>Своей миссией я считаю - трансформацию жизни человека через спорт:</b>
+				<p>
+					Улучшение её качества и увеличение продолжительности – настолько максимально, насколько это в принципе возможно. <br><br>
+					Сбросить вес или набрать мышечную массу – это элементарная задача при должном соблюдении определенных тренировочных правил. <br><br>
+					Глобальная же задача, которую я решаю со своими подопечными – это создание и поддержание такого тренировочного образа жизни, при котором Вы приходите к сбалансированно развитому телу и настолько крепкой ментальности, что любая жизненная задача становится легко преодолимой.
+				</p>
+			</div>
+		</section>
 	</main>
 
 	<footer>
