--- a/index.html
+++ b/index.html
@@ -165,6 +165,26 @@
 				</p>
 			</div>
 		</section>
+
+		<section class="specialization">
+			<div class="container">
+				<h2>Моя основная специализация сейчас</h2>
+				<div class="specialization__grid">
+					<div class="specialization__col">
+						<p>
+							В своей работе я превращаю просто успешных людей – в по-настоящему счастливых, живущих полной жизнью, использующих максимум возможностей своего тела успешных людей. <br><br>
+							На текущий момент по большей части – я специализируюсь на изменении образа жизни Мужчин старше 35 лет, которые достигли в социальном плане того, к чему стремились. <br><br>
+							Основу моих подопечных составляют непубличные люди: бизнесмены, топ-менеджеры и предприниматели высокого уровня, которые являются ролевыми моделями в абсолютно разных сферах. <br><br>
+							Я знаю всё о трансформации образа жизни людей, у которых в этой жизни есть всё. Люди, с которыми я работаю, привыкли к самым высоким стандартам во всём. Они всегда выбирают лучшее. И поэтому в сфере фитнеса – выбирают меня. <br><br>
+							Будучи атлетом мирового класса и персональным тренером с таким огромным и разнообразным опытом работы, я создал беспримерную, несравнимую ни с чем, репутацию в фитнес индустрии.
+						</p>
+					</div>
+					<div class="specialization__col">
+						
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
