Add Specialization Section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,17 @@
 						</p>
 					</div>
 					<div class="specialization__col">
-						
+						<b>Я решаю абсолютно разные, уникальные задачи с каждым подопечным:</b>
+						<ul>
+							<li>Сбросить вес</li>
+							<li>Набрать мышечную массу</li>
+							<li>Улучшить свою производительность</li>
+							<li>Повысить выносливость</li>
+							<li>Увеличить силовые показатели</li>
+							<li>Быть в форме 365 дней в году</li>
+							<li>Подготовиться к решению любой индивидуальной задаче</li>
+							<li>Улучшить качество и яркость каждого дня</li>
+						</ul>
 					</div>
 				</div>
 			</div>
