Add Style Section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,39 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="style">
+			<div class="container">
+				<h2>Мой стиль работы</h2>
+				<div class="style__grid">
+					<div class="style__col">
+						<div class="style__photo-wrap">
+							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+						</div>
+						<p>
+							Я работаю с абсолютно разными психотипами людей, и под каждого человека – подбираю индивидуальный метод работы.
+							При этом – всегда придерживаюсь своих принципов: на тренировке мы готовим ВАС к жизни, а это значит, что абсолютно каждый подопечный в работе со мной становится более собранным, воле устойчивым, ответственным (за свой собственный результат), способным терпеть и достигать поставленной цели. Чтобы, победив себя в зале – Вы были готов побеждать и в жизни. <br><br>
+							То, чем я занимаюсь – это моя основная деятельность и дело моей жизни. <br><br>
+							В спорте высших достижений я – с 10 лет, тренирую – с 18. С 28 – владелец собственных кроссфит залов, через которые прошло за всё время более 10 000 человек. <br><br>
+							Я не понаслышке знаю разницу между тренировками атлетов для достижения победы на соревнованиях и тренировками людей, для которых спорт является инструментом – для того, чтобы быть в форме и проживать каждый свой день максимально ярко и качественно. <br><br>
+							В своей работе я использую очень много методов (начиная от легкой атлетики и гимнастики, заканчивая кроссфитом, тяжелой атлетикой и игровыми видами спорта, комбинируя их в зависимости от поставленной задачи). <br><br>
+							При этом, я делаю акцент в первую очередь на работе с базой, используя максимально простые (базовые) тренировочные движения, которые создадут фундамент вашей подготовки, вместо использования сложно-координационных движений, при которых повышается риск получения травмы. <br><br>
+							Помимо профессиональных аспектов, меня выбирают за высочайший уровень энергии и тот заряд, который я передаю каждому подопечному, на котором он затем идёт и сворачивает горы – решая свои повседневные задачи.
+						</p>
+					</div>
+					<div class="style__col">
+						<b>3 вещи, которые выделяют меня:</b>
+						<ul>
+							<li><span>01</span> Спортсмен мирового уровня, мастер спорта международного класса</li>
+							<li><span>02</span> Знаю разницу между тренировкой профессиональных спортсменов и тренировками людей – для поддержания (создания) здорового образа жизни: я владелец кроссфит зала и зала единоборств, я тренировал профессиональных спортсменов, я тренирую и девушек в том числе, и я работаю индивидуально с людьми, для которых важен индивидуальный подход и полная конфиденциальность. Я комбинирую между собой столько тренировочных методов, сколько необходимо – для наилучшего результата</li>
+							<li><span>03</span> Мой взгляд на здоровье и физическую активность.Я считаю, что каждый человек должен стремиться к тому, что прожить минимум до 120 лет, а не программировать себя на старость с 30, как это делает большинство. Я считаю, что если вам 40 – это прекрасный возраст для того, чтобы тренироваться, изучать новое, внедрять хобби в свою жизнь и строить планы</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
