Add Vision Section

--- a/index.html
+++ b/index.html
@@ -228,6 +228,34 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="vision">
+			<div class="container">
+				<h2>Мое видение</h2>
+				<p class="vision__quote">«Продли свою молодость и живи минимум до 120 лет»</p>
+				<div class="vision__grid">
+					<div class="vision__col">
+						<p>
+							Продолжительность и качество жизни – мой приоритет в работе.
+							Мы перестаём делать какие-то вещи не из-за того, что стареем. А мы стареем потому, что перестаём делать то, что нам нравилось, то для чего нужно стараться и прикладывать усилия. <br><br>
+							«Что можешь быть дороже жизни? И во сколько ты её оцениваешь?»
+							Жизнь – одна. И то, как ты относишься к своему телу и своему здоровью – напрямую влияет и на продолжительность вашей жизни и на её качество.
+							Продолжительность – очень важна. Но она меркнет, если в вашей жизни – нет жизни. Если вы живёте тускло, чувствуете себя – вяло, тяжело, не энергично. И не пользуетесь энергией и ресурсами своего организма на максимум. <br><br>
+							Большинство моих подопечных – это люди, которые уже – высоко реализованы, иначе говоря – у которых есть в жизни всё.
+							И задача, для решения которой ко мне обращаются – это улучшить КАЧЕСТВО своей жизни: её чувствования, уровень энергии, здоровья, функциональных возможностей организма. <br><br>
+							Чтобы ощущать – что вся жизнь – впереди. Что твой уровень энергии – также высок, как и в 20-25 лет. Что твои физические кондиции позволяют тебе заниматься любым хобби (бег, теннис, яхтинг, сёрфинг, тяжелая атлетика – всё, что угодно). Чтобы быть примером для своей семьи и своего окружения. <br><br>
+							Моя задача работы с каждым подопечным – избавиться от этой угнетающей установки: «Я уже старый (мне 40+) / мне уже поздно (мне 50+) /я просто доживаю свою жизнь». И поменять на абсолютно новое видение: когда ты и в 50 и в 60 – бегаешь-плаваешь, работаешь с отягощениями, живёшь полноценной жизнью и продолжаешь заниматься своими хобби с такой же страстью, как ты это делал и 20-30 лет назад. <br><br>
+							Я считаю, что каждый человек должен стремиться к тому, что прожить минимум до 120 лет, а не программировать себя на старость с 30, как это делает большинство. Я считаю, что если вам 40 – это прекрасный возраст для того, чтобы тренироваться, изучать новое, внедрять хобби в свою жизнь и строить планы.
+						</p>
+					</div>
+					<div class="vision__col">
+						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
