Add Plus Section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,56 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="plus">
+			<div class="container">
+				<h2>Дополнительные плюсы работы со мной</h2>
+				<div class="plus__grid">
+					<div class="plus__card">
+						<span>01</span>
+						<div>
+							<h3>Ответственность и никаких отговорок</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+					<div class="plus__card">
+						<span>02</span>
+						<div>
+							<h3>Высокие стандарты жизни</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+					<div class="plus__card">
+						<span>03</span>
+						<div>
+							<h3>Анонимность</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+					<div class="plus__card">
+						<span>04</span>
+						<div>
+							<h3>«Медленный метаболизм и низкий тестостерон» – я знаю, как повернуть эти процессы вспять</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+					<div class="plus__card">
+						<span>05</span>
+						<div>
+							<h3>Трансформация вредных привычек</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+					<div class="plus__card">
+						<span>06</span>
+						<div>
+							<h3>Коммуникация и нетворкинг</h3>
+							<img src="/assets/icons/turn-arrow.svg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
