Add Transformation Section

--- a/index.html
+++ b/index.html
@@ -306,6 +306,20 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="transformation">
+			<div class="container">
+				<h2>Трансформации</h2>
+				<div class="transformation__grid">
+					<img src="/assets/img/img-01.jpg" alt="">
+					<img src="/assets/img/img-02.jpg" alt="">
+					<img src="/assets/img/img-03.jpg" alt="">
+					<img src="/assets/img/img-04.jpg" alt="">
+					<img src="/assets/img/img-05.jpg" alt="">
+					<img src="/assets/img/img-06.jpg" alt="">
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer>
