--- a/index.html
+++ b/index.html
@@ -320,10 +320,33 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="contacts">
+			<div class="container">
+				<h2>Мои контакты</h2>
+				<a href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
+				<a href="mailto:danila@site.ru">danila@site.ru</a>
+			</div>
+		</section>
 	</main>
 
 	<footer>
-
+		<div class="container container__footer">
+			<div class="copyright">
+				<a href="#" alt="Логотип Данилы Шохина">
+					<img src="/assets/icons/logo.svg">
+				</a>
+				<span>Все права защищены © Данила Шохин</span>
+		</div>
+		<a class="politics" href="#">Политика конфиденциальности</a>
+		<div class="networks">
+			<a href="#"><img src="/assets/icons/vk.svg"></a>
+			<a href="#"><img src="/assets/icons/telegram.svg"></a>
+			<a href="#"><img src="/assets/icons/whatsapp.svg"></a>
+			<a href="#">Сделано в Net7</a>
+		</div>
+		</div>
 	</footer>
+
 </body>
 </html>
