--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<nav>
 				<a href="#progress" class="navlink">Достижения</a>
 				<a href="#about" class="navlink">Обо мне</a>
-				<a href="#" class="navlink">Трансформации</a>
-				<a href="#" class="navlink">Стоимость</a>
-				<a href="#" class="navlink">Контакты</a>
+				<a href="#transformation" class="navlink">Трансформации</a>
+				<a href="#price" class="navlink">Стоимость</a>
+				<a href="#contacts" class="navlink">Контакты</a>
 			</nav>
 			<a href="#" class="btn btn--primary">Свяжитесь со мной</a>
 		</div>
@@ -35,6 +35,7 @@
 				<source src="/assets/video/danila_video.mp4" type="video/mp4">
 			</video>
 		</section>
+
 		<section class="progress" id="progress">
 			<div class="container">
 				<h2>Достижения</h2>
@@ -62,7 +63,6 @@
 					<div>
 						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
-
 					<div>
 						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
@@ -124,6 +124,7 @@
 				</div>
 			</div>
 		</section>
+
 		<section class="about" id="about">
 			<div class="container">
 				<h2>Обо мне</h2>
@@ -307,7 +308,7 @@
 			</div>
 		</section>
 
-		<section class="transformation">
+		<section class="transformation" id="transformation">
 			<div class="container">
 				<h2>Трансформации</h2>
 				<div class="transformation__grid">
@@ -321,7 +322,14 @@
 			</div>
 		</section>
 
-		<section class="contacts">
+		<section class="price" id="price">
+			<div class="container">
+				<h2>Стоимость</h2>
+
+			</div>
+		</section>
+
+		<section class="contacts" id="contacts">
 			<div class="container">
 				<h2>Мои контакты</h2>
 				<a href="tel:+7 999 999 99 99">+7 999 999 99 99</a>
