--- a/index.html
+++ b/index.html
@@ -325,7 +325,24 @@
 		<section class="price" id="price">
 			<div class="container">
 				<h2>Стоимость</h2>
+				<div class="price__grid">
+					<div class="price__item">
+						<div>
+							<img src="/assets/icons/elipse.svg" alt="">
+							<span>1 час</span>
+						</div>
+						<div>
+							<img src="/assets/icons/line-01.svg" alt="">
+							<span>30 000 рублей</span>
+						</div>
+					</div>
+					<div class="price__item">
 
+					</div>
+					<div class="price__item">
+
+					</div>
+				</div>
 			</div>
 		</section>
 
