--- a/index.html
+++ b/index.html
@@ -335,10 +335,20 @@
 							<img src="/assets/icons/line-01.svg" alt="">
 							<span>30 000 рублей</span>
 						</div>
+						<a href="#">Записаться на тренировку</a>
 					</div>
-					<div class="price__item">
 
+					<div class="price__item">
+						<div>
+							<img src="/assets/icons/elipse.svg" alt="">
+							<span>10 тренировочных сессий</span>
+						</div>
+						<p>
+							1 тренировочная сессия выходит за пределы 1 часа <br>
+							(длительность подбирается в зависимости <br> от тренировочной задачи и обговаривается заранее)
+						</p>
 					</div>
+
 					<div class="price__item">
 
 					</div>
