Add Price Section

--- a/index.html
+++ b/index.html
@@ -340,13 +340,20 @@
 
 					<div class="price__item">
 						<div>
-							<img src="/assets/icons/elipse.svg" alt="">
-							<span>10 тренировочных сессий</span>
+							<div>
+								<img src="/assets/icons/elipse.svg" alt="">
+								<span>10 тренировочных сессий</span>
+							</div>
+							<p>
+								1 тренировочная сессия выходит за пределы 1 часа <br>
+								(длительность подбирается в зависимости <br> от тренировочной задачи и обговаривается заранее)
+							</p>
 						</div>
-						<p>
-							1 тренировочная сессия выходит за пределы 1 часа <br>
-							(длительность подбирается в зависимости <br> от тренировочной задачи и обговаривается заранее)
-						</p>
+					
+						<div class="price__var">
+							<img src="/assets/icons/line-02.svg" alt="">
+							<span>300 000 рублей</span>
+						</div>
 					</div>
 
 					<div class="price__item">
