--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<header>
 		<div class="header__container">
-			<a href="/" class="logo"><img src="/assets/icons/logo.svg" alt=""></a>
+			<a href="/" class="logo"><img src="assets/icons/logo.svg" alt=""></a>
 			<nav>
 				<a href="#progress" class="navlink">Достижения</a>
 				<a href="#about" class="navlink">Обо мне</a>
@@ -29,10 +29,10 @@
 				<h1>Данила Шохин</h1>
 				<p>Персональный тренер по кроссфиту</p>
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
-				<a class="arrow-down" href="#progress"><img src="/assets/icons/arrow-down.svg" alt=""></a>
+				<a class="arrow-down" href="#progress"><img src="assets/icons/arrow-down.svg" alt=""></a>
 			</div>
 			<video autoplay muted loop>
-				<source src="/assets/video/danila_video.mp4" type="video/mp4">
+				<source src="assets/video/danila_video.mp4" type="video/mp4">
 			</video>
 		</section>
 
@@ -46,28 +46,28 @@
 						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 						</div>
 					</div>
 					<div class="timeline__wrap">
-						<img src="/assets/icons/cubok.svg" alt="">
+						<img src="assets/icons/cubok.svg" alt="">
 						<div class="timeline"></div>
 					</div>
 					<div>
-						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
 					<div>
-						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
 					<div class="timeline__wrap">
-						<img src="/assets/icons/cubok.svg" alt="">
+						<img src="assets/icons/cubok.svg" alt="">
 					</div>
 					<div class="progress__col progress__col--second">
 						<span class="year">2014</span>
@@ -75,13 +75,13 @@
 						<p class="desc">Серебряный призёр Siberian Showdown</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 						</div>
 					</div>
@@ -91,34 +91,34 @@
 						<p class="desc">Победитель первого отборочного этапа на Crossfit Games</p>
 						<div class="progress__images">
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 							<div class="progress__images__inner">
-								<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+								<img src="assets/img/shokhin-01_2X.jpg" alt="">
 							</div>
 						</div>
 					</div>
 					<div class="timeline__wrap">
-						<img src="/assets/icons/cubok.svg" alt="">
+						<img src="assets/icons/cubok.svg" alt="">
 					</div>
 					<div>
-						<img class="large-img" src="/assets/img/shokhin-01_2X.jpg" alt="">
+						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
 					</div>
 				</div>
 				<div class="progress__bottom">
 					<div class="progress__bottom__item">
-						<img src="/assets/icons/aerobika.svg" alt="">
+						<img src="assets/icons/aerobika.svg" alt="">
 						<p>Мастер спорта международного класса <br> по аэробной гимнастике</p>
 					</div>
 					<div class="progress__bottom__item">
-						<img src="/assets/icons/stanovaya.svg" alt="">
+						<img src="assets/icons/stanovaya.svg" alt="">
 						<p>Мастер спорта по становой тяге</p>
 					</div>
 					<div class="progress__bottom__item">
-						<img src="/assets/icons/regbi.svg" alt="">
+						<img src="assets/icons/regbi.svg" alt="">
 						<p>Кандидат мастера спорта <br> и чемпион Москвы по регби</p>
 					</div>
 				</div>
@@ -129,7 +129,7 @@
 			<div class="container">
 				<h2>Обо мне</h2>
 				<div class="about__grid">
-					<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+					<img src="assets/img/shokhin-02-2X.jpg" alt="">
 					<div class="about__text__wrap">
 						<div class="about__text__item">
 							<b>Образование:</b>
@@ -203,9 +203,9 @@
 				<div class="style__grid">
 					<div class="style__col">
 						<div class="style__photo-wrap">
-							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
-							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
-							<img src="/assets/img/shokhin-01_2X.jpg" alt="">
+							<img src="assets/img/shokhin-01_2X.jpg" alt="">
+							<img src="assets/img/shokhin-01_2X.jpg" alt="">
+							<img src="assets/img/shokhin-01_2X.jpg" alt="">
 						</div>
 						<p>
 							Я работаю с абсолютно разными психотипами людей, и под каждого человека – подбираю индивидуальный метод работы.
@@ -250,9 +250,9 @@
 						</p>
 					</div>
 					<div class="vision__col">
-						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
-						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
-						<img src="/assets/img/shokhin-02-2X.jpg" alt="">
+						<img src="assets/img/shokhin-02-2X.jpg" alt="">
+						<img src="assets/img/shokhin-02-2X.jpg" alt="">
+						<img src="assets/img/shokhin-02-2X.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -266,42 +266,42 @@
 						<span>01</span>
 						<div>
 							<h3>Ответственность и никаких отговорок</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="plus__card">
 						<span>02</span>
 						<div>
 							<h3>Высокие стандарты жизни</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="plus__card">
 						<span>03</span>
 						<div>
 							<h3>Анонимность</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="plus__card">
 						<span>04</span>
 						<div>
 							<h3>«Медленный метаболизм и низкий тестостерон» – я знаю, как повернуть эти процессы вспять</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="plus__card">
 						<span>05</span>
 						<div>
 							<h3>Трансформация вредных привычек</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 					<div class="plus__card">
 						<span>06</span>
 						<div>
 							<h3>Коммуникация и нетворкинг</h3>
-							<img src="/assets/icons/turn-arrow.svg" alt="">
+							<img src="assets/icons/turn-arrow.svg" alt="">
 						</div>
 					</div>
 				</div>
@@ -312,12 +312,12 @@
 			<div class="container">
 				<h2>Трансформации</h2>
 				<div class="transformation__grid">
-					<img src="/assets/img/img-01.jpg" alt="">
-					<img src="/assets/img/img-02.jpg" alt="">
-					<img src="/assets/img/img-03.jpg" alt="">
-					<img src="/assets/img/img-04.jpg" alt="">
-					<img src="/assets/img/img-05.jpg" alt="">
-					<img src="/assets/img/img-06.jpg" alt="">
+					<img src="assets/img/img-01.jpg" alt="">
+					<img src="assets/img/img-02.jpg" alt="">
+					<img src="assets/img/img-03.jpg" alt="">
+					<img src="assets/img/img-04.jpg" alt="">
+					<img src="assets/img/img-05.jpg" alt="">
+					<img src="assets/img/img-06.jpg" alt="">
 				</div>
 			</div>
 		</section>
@@ -328,11 +328,11 @@
 				<div class="price__grid">
 					<div class="price__item">
 						<div>
-							<img src="/assets/icons/elipse.svg" alt="">
+							<img src="assets/icons/elipse.svg" alt="">
 							<span>1 час</span>
 						</div>
 						<div>
-							<img src="/assets/icons/line-01.svg" alt="">
+							<img src="assets/icons/line-01.svg" alt="">
 							<span>30 000 рублей</span>
 						</div>
 						<a href="#">Записаться на тренировку</a>
@@ -341,7 +341,7 @@
 					<div class="price__item">
 						<div>
 							<div>
-								<img src="/assets/icons/elipse.svg" alt="">
+								<img src="assets/icons/elipse.svg" alt="">
 								<span>10 тренировочных сессий</span>
 							</div>
 							<p>
@@ -351,7 +351,7 @@
 						</div>
 					
 						<div class="price__var">
-							<img src="/assets/icons/line-02.svg" alt="">
+							<img src="assets/icons/line-02.svg" alt="">
 							<span>300 000 рублей</span>
 						</div>
 					</div>
@@ -376,15 +376,15 @@
 		<div class="container container__footer">
 			<div class="copyright">
 				<a href="#" alt="Логотип Данилы Шохина">
-					<img src="/assets/icons/logo.svg">
+					<img src="assets/icons/logo.svg">
 				</a>
 				<span>Все права защищены © Данила Шохин</span>
 		</div>
 		<a class="politics" href="#">Политика конфиденциальности</a>
 		<div class="networks">
-			<a href="#"><img src="/assets/icons/vk.svg"></a>
-			<a href="#"><img src="/assets/icons/telegram.svg"></a>
-			<a href="#"><img src="/assets/icons/whatsapp.svg"></a>
+			<a href="#"><img src="assets/icons/vk.svg"></a>
+			<a href="#"><img src="assets/icons/telegram.svg"></a>
+			<a href="#"><img src="assets/icons/whatsapp.svg"></a>
 			<a href="#">Сделано в Net7</a>
 		</div>
 		</div>
