--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<header>
 		<div class="header__container">
-			<a href="/" class="logo"><img src="assets/icons/logo.svg" alt=""></a>
+			<a href="/index.html" class="logo"><img src="assets/icons/logo.svg" alt=""></a>
 			<nav>
 				<a href="#progress" class="navlink">Достижения</a>
 				<a href="#about" class="navlink">Обо мне</a>
