--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Данила Шохин – персональный тренер. Кроссфит и аэробная гимнастика</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-	<link rel="manifest" href="assets/favicons/site.webmanifest">
-	<link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#6015ff">
-	<link rel="shortcut icon" href="assets/favicons/favicon.ico">
-	<meta name="msapplication-TileColor" content="#6015ff">
-	<meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
-	<meta name="theme-color" content="#ffffff">
+	
+	<link rel="apple-touch-icon" href="assets/favicons/apple-touch-icon.png">
+	<link rel="icon" href="assets/favicons/favicon.ico" sizes="any">
+	<link rel="icon" href="assets/favicons/icon.svg" type="image/svg+xml">
+	<link rel="yandex-tableau-widget" href="/tableau.json">
+	<link rel="manifest" href="assets/favicons/manifest.webmanifest">
+
 	<link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
