Add tag Picture

--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
 						<div class="timeline"></div>
 					</div>
 					<div>
-						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
+						<picture>
+							<source srcset="assets/img/danila_01_small@1x.avif 1x, assets/img/danila_01_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+							<source srcset="assets/img/danila_01_small@1x.webp 1x, assets/img/danila_01_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+							<source srcset="assets/img/danila_01_small@1x.jpg 1x, assets/img/danila_01_small@2x.jpg 2x" media="(max-width: 500px)">
+							<source srcset="assets/img/danila_01_large@1x.avif 1x, assets/img/danila_01_large@2x.avif 2x" type="image/avif">
+							<source srcset="assets/img/danila_01_large@1x.webp 1x, assets/img/danila_01_large@2x.webp 2x" type="image/webp">
+							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу">
+						</picture>
 					</div>
 					<div>
 						<img class="large-img" src="assets/img/shokhin-01_2X.jpg" alt="">
