--- a/index.html
+++ b/index.html
@@ -143,7 +143,17 @@
 			<div class="container">
 				<h2>Обо мне</h2>
 				<div class="about__grid">
-					<img src="assets/img/shokhin-02-2X.jpg" alt="">
+					<picture>
+						<source srcset="assets/img/about-danila_small@1x.avif 1x, assets/img/about-danila_small@2x.avif 2x" media="(max-width: 500px)" type="image/avif">
+						<source srcset="assets/img/about-danila_small@1x.webp 1x, assets/img/about-danila_small@2x.webp 2x" media="(max-width: 500px)" type="image/webp">
+						<source srcset="assets/img/about-danila_small@1x.jpg 1x, assets/img/about-danila_small@2x.jpg 2x" media="(max-width: 500x)">
+						<source srcset="assets/img/about-danila_medium@1x.avif 1x, assets/img/about-danila_medium@2x.avif 2x" media="(max-width: 1024px)" type="image/avif">
+						<source srcset="assets/img/about-danila_medium@1x.webp 1x, assets/img/about-danila_medium@2x.webp 2x" media="(max-width: 1024px)" type="image/webp">
+						<source srcset="assets/img/about-danila_medium@1x.jpg 1x, assets/img/about-danila_medium@2x.jpg 2x" media="(max-width: 1024x)">
+						<source srcset="assets/img/about-danila_large@1x.avif 1x, assets/img/about-danila_large@2x.avif 2x" type="image/avif">
+						<source srcset="assets/img/about-danila_large@1x.webp 1x, assets/img/about-danila_large@2x.webp 2x" type="image/webp">
+						<img src="assets/img/about-danila_large@1x.jpg" srcset="assets/img/about-danila_large@2x.jpg 2x" alt="Сильный мужчина с голым торсом">
+					</picture>
 					<div class="about__text__wrap">
 						<div class="about__text__item">
 							<b>Образование:</b>
