--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							<source srcset="assets/img/danila_01_small@1x.jpg 1x, assets/img/danila_01_small@2x.jpg 2x" media="(max-width: 500px)">
 							<source srcset="assets/img/danila_01_large@1x.avif 1x, assets/img/danila_01_large@2x.avif 2x" type="image/avif">
 							<source srcset="assets/img/danila_01_large@1x.webp 1x, assets/img/danila_01_large@2x.webp 2x" type="image/webp">
-							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу">
+							<img class="large-img" src="assets/img/danila_01_large@1x.jpg" srcset="assets/img/danila_01_large@2x.jpg 2x" alt="Сильный мужчина, поднимающий штангу.">
 						</picture>
 					</div>
 					<div>
@@ -152,7 +152,7 @@
 						<source srcset="assets/img/about-danila_medium@1x.jpg 1x, assets/img/about-danila_medium@2x.jpg 2x" media="(max-width: 1024x)">
 						<source srcset="assets/img/about-danila_large@1x.avif 1x, assets/img/about-danila_large@2x.avif 2x" type="image/avif">
 						<source srcset="assets/img/about-danila_large@1x.webp 1x, assets/img/about-danila_large@2x.webp 2x" type="image/webp">
-						<img src="assets/img/about-danila_large@1x.jpg" srcset="assets/img/about-danila_large@2x.jpg 2x" alt="Сильный мужчина с голым торсом">
+						<img src="assets/img/about-danila_large@1x.jpg" srcset="assets/img/about-danila_large@2x.jpg 2x" alt="Сильный мужчина с голым торсом.">
 					</picture>
 					<div class="about__text__wrap">
 						<div class="about__text__item">
