--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 							<img src="assets/icons/line-01.svg" alt="">
 							<span>30 000 рублей</span>
 						</div>
-						<a href="#">Записаться на тренировку</a>
+						<a class="link link--secondary" href="#">Записаться на тренировку</a>
 					</div>
 
 					<div class="price__item">
@@ -404,7 +404,7 @@
 				</a>
 				<span>Все права защищены © Данила Шохин</span>
 		</div>
-		<a class="politics" href="#">Политика конфиденциальности</a>
+		<a class="link" href="#">Политика конфиденциальности</a>
 		<div class="networks">
 			<a href="#"><img src="assets/icons/vk.svg"></a>
 			<a href="#"><img src="assets/icons/telegram.svg"></a>
