--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<a href="#" class="btn btn--secondary">Получить консультацию</a>
 				<a class="arrow-down" href="#progress"><img src="assets/icons/arrow-down.svg" alt=""></a>
 			</div>
-			<video autoplay muted loop>
+			<video video autoplay loop muted playsinline webkit-playinginline>
 				<source src="assets/video/danila_video.mp4" type="video/mp4">
 			</video>
 		</section>
