--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<header>
 		<div class="header__container">
-			<a href="/danila/index.html" class="logo"><img src="assets/icons/logo.svg" alt=""></a>
+			<a href="/" class="logo"><img src="assets/icons/logo.svg" alt=""></a>
 			<nav>
 				<a href="#progress" class="navlink">Достижения</a>
 				<a href="#about" class="navlink">Обо мне</a>
@@ -399,7 +399,7 @@
 	<footer>
 		<div class="container container__footer">
 			<div class="copyright">
-				<a href="#" alt="Логотип Данилы Шохина">
+				<a href="/" alt="Логотип Данилы Шохина">
 					<img src="assets/icons/logo.svg">
 				</a>
 				<span>Все права защищены © Данила Шохин</span>
